@@ -1,5 +1,5 @@
 #
-# $Id: VRMLNodes.pm,v 1.249 2008/08/14 05:02:32 crc_canada Exp $
+# $Id: VRMLNodes.pm,v 1.250 2008/08/16 03:17:23 crc_canada Exp $
 #
 # Copyright (C) 1998 Tuomas J. Lukka 1999 John Stewart CRC Canada.
 # DISTRIBUTED WITH NO WARRANTY, EXPRESS OR IMPLIED.
@@ -1096,6 +1096,8 @@ package VRML::NodeType;
 						children => [MFNode, [], inputOutput],		# for X3D spec
 						center => [SFVec3f, [0, 0, 0],  initializeOnly],
 						range => [MFFloat, [], initializeOnly],
+						bboxCenter => [SFVec3f, [0, 0, 0], initializeOnly],
+						bboxSize => [SFVec3f, [-1, -1, -1], initializeOnly],
 						__isX3D => [SFInt32, 0, initializeOnly], # 0 = VRML,  1 = X3D
 						_selected =>[FreeWRLPTR,0,initializeOnly],
 					   },"X3DGroupingNode"),
@@ -1106,7 +1108,7 @@ package VRML::NodeType;
 						axisOfRotation => [SFVec3f, [0, 1, 0], inputOutput],
 						children => [MFNode, [], inputOutput],
 						bboxCenter => [SFVec3f, [0, 0, 0], initializeOnly],
-						bboxSize => [SFVec3f, [-1, -1, -1], initializeOnly]
+						bboxSize => [SFVec3f, [-1, -1, -1], initializeOnly],
 					   },"X3DGroupingNode"),
 
 	Collision => new VRML::NodeType("Collision", {
