@@ -1,4 +1,7 @@
 For 1.20.6
+	- Moving BoundingBox calculations from scenegraph rendering step to node
+	  updating step.
+
 	- Polyrep.c; normal finding, might go off end of coordindex array. Fixed.
 	  affects Extrusions, IndexedFaceSets, ElevationGrids, etc.
 
